# drf-api-authentication

./: README.md  TEST_REQUESTS.md  manage.py  pyproject.toml  requirements.txt
accounts/: admin.py  forms.py  models.py
accounts/migrations/: 0001_initial.py
chips/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
chips/migrations/: 0001_initial.py
chips_project/: asgi.py  settings.py  urls.py  wsgi.py
